# shai-hulud-detector

./: CHANGELOG.md  README.md  pyproject.toml
src/: common.py
