[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shai-hulud-detector"
version = "1.0.4"
description = "A CLI tool to detect potential Shai Hulud npm-worm compromises in GitHub users and organizations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "ysskrishna", email = "sivasaikrishnassk@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]
keywords = [
    "github",
    "security",
    "scanner",
    "cli",
    "detection",
    "compromise",
    "npm-worm",
    "supply-chain-attack",
    "malware-detection",
    "vulnerability-scanner",
    "devsecops",
    "security-tool",
    "python-cli",
    "npm",
    "supply-chain-security",
    "shai-hulud",
    "threat-detection",
    "repository-scanning",
    "ioc",
    "indicators-of-compromise",
    "github-security",
    "npm-security",
]
dependencies = [
  "typer>=0.9.0",
  "PyGithub>=2.1.0",
]

[project.scripts]
shai-hulud-detector = "src.cli:main"

[project.urls]
Homepage = "https://github.com/ysskrishna/shai-hulud-detector"
Documentation = "https://github.com/ysskrishna/shai-hulud-detector#readme"
Repository = "https://github.com/ysskrishna/shai-hulud-detector.git"
Issues = "https://github.com/ysskrishna/shai-hulud-detector/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.internalurls]
author_username = "ysskrishna"
author_name = "Y. Siva Sai Krishna"
author_github = "https://github.com/ysskrishna"
author_linkedin = "https://linkedin.com/in/ysskrishna"
